2009-07-30  Christian Faulhammer  <fauli@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-warn): Warn on
	bindnow-flags usage

2009-05-30  Ulrich Mueller  <ulm@gentoo.org>

	* Version 1.12 released.

2009-05-24  Ulrich Mueller  <ulm@gentoo.org>

	* gentoo-syntax.el (ebuild-mode-sort-keywords): Change sorting
	order, reflecting a change in gentoolkit-dev.

2009-05-05  Christian Faulhammer  <fauli@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-deprecated):
	Add prepalldocs, dosed and dohard, as we don't want to encourage
	people.

2009-04-12  Ulrich Mueller  <ulm@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-gnome2-utils):
	Add gnome2_gconf_savelist and gnome2_icon_savelist functions, and
	some corrections.

2009-03-12  Christian Faulhammer  <fauli@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-rpm):
	add rpm_spec_epatch function
	(ebuild-mode-keywords-cmake-utils): add support for cmake-utils.eclass

2009-03-09  Christian Faulhammer  <fauli@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-gnome2):
	Add gnome2_src_unpack function

2009-03-06  Christian Faulhammer  <fauli@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-perl-module):
	updatepod() has been pruned from the perl-module eclass.

2009-01-27  Ulrich Mueller  <ulm@gentoo.org>

	* gentoo-syntax.el (ebuild-mode-before-save): New hook function,
	collecting all actions to be done before saving.
	(ebuild-mode, eselect-mode): Call it.

2009-01-24  Christian Faulhammer  <fauli@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-flag-o-matic):
	add append-cxxflags() function

2009-01-19  Christian Faulhammer  <fauli@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-go-mono):
	Add new go-mono.eclass
	(ebuild-mode-keywords-mono): Add new mono.eclass

2009-01-07  Ulrich Mueller  <ulm@gentoo.org>

	* Version 1.11 released.

2009-01-05  Ulrich Mueller  <ulm@gentoo.org>
